# envtomllib

./: Containerfile  LICENSE  README.md  pyproject.toml
envtomllib/: __init__.py
tests/: test_complex_replacement.toml  test_envtoml.py  test_simple.toml  test_simple_replacement.toml
