[tool.poetry]
name = "envTOMLlib"
version = "0.0.1"
description = "originally it was a fork of dead envtoml by mrshu/envtoml but it has been completely rewritten and it is now using in-build tomllib. "
authors = ["mr.Shu <mr@shu.io>", "koudy <paseka.logadm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/"
keywords = ['toml', "tomllib", 'environment', 'variables', 'config']
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
